syntax = "proto3";

package parrot.missions.samples.hello.airsdk.messages;

import 'google/protobuf/empty.proto';
import 'parrot/protobuf/extensions.proto';

// for the application-side of the mission
// (ie. "com" prefix + "drone" intermediate package)
option java_package = "com.parrot.drone.missions.samples.hello.airsdk";
option java_outer_classname = "Hello";

option (olympe_package) = "parrot.missions.samples.hello";

// Union of all possible commands of this package.
message Command {
    oneof id {
        // Ask to start say hello (ground)
        google.protobuf.Empty say = 1;
        // Ask to stop say hello (ground)
        google.protobuf.Empty hold = 2;
    }
}

// Union of all possible events of this package.
message Event {
    oneof id {
        // Count of hello (ground)
        uint32 count = 1;
        // Stereo sees something close (all)
        bool stereo_close = 2;
        // Drone is moving/steady (ground)
        bool drone_moving = 3;
        // Mean depth to closest object
        float depth_mean = 4;
    }
}
